Fix item width on iPhone

--- a/resources/stylesheets/scss/cs-style.scss
+++ b/resources/stylesheets/scss/cs-style.scss
@@ -779,7 +779,7 @@ form .search-button:hover {
 
 .book-copy-wrapper {
   float: left;
-  width: 75%;
+  width: 70%;
 }
 
 // Google Maps
